Modal 1/style.css
html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    background: #FCAB84;
    font-family: 'Muli', sans-serif;
    margin: 0;
}

a {
    text-decoration: none;
    color: inherit;
}

.main-container {
    display: grid;
    place-items: center;
    height: 100vh;
}


.modal-container {
    background: #fff;
    border-radius: 9px;
    width: 90%;
    max-width: 450px;
    margin: 0 auto;
    padding: 20px;
}

.modal-icons_cont {
    color: #81838D;
    display: grid;
    grid-template-columns: auto 1fr;
    justify-items: end;
    align-items: center;
}

.fa-arrow-left {
    padding: 8px 10px;
    background: #eaeaea;
    border-radius: 3px;

}

.modal-content_cont {
    width: 80%;
    /* background: #0874; */
    margin: 0 auto;
    padding: 20px 0;
}

.modal-content_cont p {
    font-size: .85rem;
}

.modal-content_cont h3 {
    font-size: 1.1rem;
    margin: 30px 0 8px;
}

input {
    border: 1px solid #c9c9ca;
    border-radius: 5px;
    display: block;
    margin-bottom: 50px;
    width: 100%;
    height: 2.7rem;
    padding: 15px;
    outline: none;
}

.modal-content_cont .btn {
    display: inline-block;
    padding: .6em 2em;
    text-align: center;
    font-weight: bold;
}

.modal-content_cont .btn-continue {
    background: #F96260;
    color: #fff;
    margin-right: 10px;
}

.modal-content_cont .btn-cancel {
    background: transparent;
    color: #81838D;
}

